Major upgrade: Dual analytics tracking and database setup
🚀 Analytics Enhancements:
- Add dual analytics tracking (Google Analytics + Supabase database)
- Create analytics-enhanced.ts for comprehensive event tracking
- Update main page to track all user interactions in both systems
- Enable full dashboard functionality with real data

📊 Database Infrastructure:
- Add complete Supabase database setup scripts
- Include pre-written analytics queries for data insights
- Add comprehensive documentation for easy setup

🏷️ Project Improvements:
- Update project metadata: 'berrys-website' v1.0.0
- Add proper project description for branding
- Integrate best features from berrys2 while maintaining stability

✅ Ready for Production:
- Mobile-optimized Calendly integration maintained
- Complete analytics pipeline: tracking → storage → visualization
- All environment variables configured via Vercel
- Automatic deployment pipeline intact

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "berrys-website",
+  "version": "1.0.0",
+  "description": "berrys.ai - AI pitch feedback tool for founders",
   "private": true,
   "scripts": {
     "build": "next build",
